# RL-Practice

./: .gitignore  LICENSE  README.md  pyproject.toml
algorithms/: README.md
algorithms/a2c/: agent.py  network.py
algorithms/a3c/: agent.py  network.py
algorithms/actor_critic/: agent.py  network.py
algorithms/double_dqn/: __init__.py  agent.py
algorithms/dpo/: README.md  __init__.py  agent.py
algorithms/dqn/: agent.py  network.py
algorithms/grpo/: README.md  __init__.py  agent.py
algorithms/ppo/: agent.py  network.py
algorithms/q_learning/: __init__.py  agent.py
algorithms/reinforce/: __init__.py  agent.py  network.py
core/: __init__.py  base_agent.py  evaluator.py  replay_buffer.py  replay_episodes.py  trainer.py
environment/: README.md  __init__.py  lunar_lander.py
notebooks/: rl_theory.ipynb
scripts/: animate.py  compare.py  evaluate.py  train.py  utils.py
solutions/: README.md
solutions/a2c/: agent.py
solutions/a3c/: agent.py
solutions/actor_critic/: agent.py
solutions/dpo/: agent.py
solutions/dqn/: agent.py
solutions/grpo/: agent.py
solutions/ppo/: agent.py
solutions/q_learning/: agent.py
solutions/reinforce/: agent.py
visualization/: __init__.py  dashboard.py  policy_animator.py  training_curves.py
