[project]
name = "rl-learning"
version = "0.1.0"
description = "Reinforcement Learning learning project with LunarLander-v2"
requires-python = ">=3.11"

dependencies = [
    "gymnasium[box2d]>=0.29.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "tensorboard>=2.16.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.4.9",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "trl>=0.8.6",
    "setuptools<82",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "environment", "visualization", "algorithms", "solutions"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
